--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1",
     "nanoid": "^3.1.23"
   },
   "devDependencies": {
