--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/server.js",
-    "eslint": "npx eslint src"
+    "eslint": "npx eslint src",
+    "seed": "knex seed:run"
   },
   "keywords": [],
   "author": "",
